--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.username=francesco
-spring.datasource.password=some_pass
+spring.datasource.username=root
+spring.datasource.password=Trixware
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 
